--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 :root {
   --bg-clr: #020204;
-  --txt-main: #dcc7d5;
+  --txt-main: #e2d3ddea;
+  --txt-secondary: #dcc7d5c4;
   --columbia-blue: #c7d6dbff;
 
   --misty-rose: #ecced1ff;
@@ -32,7 +33,7 @@
   --fs-400: 2.2rem;
   --fs-500: 2.4rem;
   --fs-600: 3.2rem;
-  --fs-700: 4rem;
+  --fs-700: 4.8rem;
   --fs-800: 7.7rem;
 }
 
@@ -76,11 +77,17 @@ html {
   font-size: 62.5%;
   height: 100vh;
   width: 100vw;
+  scroll-behavior: smooth;
 }
 
 body {
   background-color: var(--bg-clr);
   color: var(--txt-main);
+  -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 a {
@@ -145,11 +152,25 @@ a {
 .color-dark {
   color: var(--chestnut);
 }
+/*------------------------------*/
+
+.container {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.container::-webkit-scrollbar {
+  display: none;
+}
 
 /*                 NAVBAR                     */
 
 nav {
-  margin: 3em var(--outer-margin) 3em var(--outer-margin);
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  padding: 3em var(--outer-margin) 3em var(--outer-margin); 
+  background-color: #020204b4; /*  ADD LINEAR GRADIENT TOP TO BOTTOM OPACITY    */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -258,26 +279,46 @@ nav {
 
 /*      MAIN      */
 
+.main-sticky-support{
+  top: 0;
+  position: relative;
+  height: 150vh;
+}
+
 main {
-  margin: 2rem 0 0 var(--outer-margin);
+  margin: 4rem 0 0 var(--outer-margin);
+  padding-top: 8rem;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  position: sticky;
+  top: 4rem;
 }
 
 .main__left {
+  position: relative;
   /* padding-left: 15rem; */
   font-family: anybody;
   font-size: 1.8rem;
   color: rgb(131, 118, 127);
   display: flex;
   flex-direction: column;
+  height: 400px;
 }
 
 .main-headings {
+  position: relative;
   background-image: linear-gradient(to right, var(--bg-clr) 205px, #ffffff00 30%);
   z-index: 1;
+  height: 250px;
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.main-headings::-webkit-scrollbar {
+  display: none;
 }
 
 .main__left h1 {
@@ -288,12 +329,12 @@ main {
   color: var(--txt-main);
 }
 
-.main__left h3 {
+.sub-heading {
   position: relative;
   padding-top: 1em;
   font-size: var(--fs-400);
   font-weight: 300;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   cursor: default;
   z-index: 2;
   color: var(--txt-main);
@@ -340,11 +381,10 @@ main {
   transition: transform 1.6s ease, margin 1s ease, font-size 1s ease;
   z-index: 0;
   align-self: auto;
-  letter-spacing: 6px;
 }
 
 .tickets-btn-show {
-  transform: translateY(20rem);
+  transform: translateY(1rem);
 }
 .tickets-btn:hover {
   font-size: 2rem;
@@ -356,38 +396,44 @@ main {
   margin-left: 20px;
 }
 
-/* address box */
+/* event setting */
 
-.address-heading {
+.event__date{
+  margin-top: 16rem;
+  font-size: var(--fs-700);
+  color: var(--txt-secondary)
+}
+
+.event__address{
   position: absolute;
-  font-size: var(--fs-100);
   font-family: "Kode Mono";
-  color: rgb(63, 102, 103);
-  bottom: 28rem;
-  left: 12rem;
+  /* color: rgb(182, 145, 201); */
+  color: rgb(69, 124, 126);
   width: 60rem;
-  /* display: none; */
+  padding-bottom: 6rem;
+  margin-top: 2rem;
 }
 
 .address-line {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   white-space: nowrap;
-  padding-top: 10px;
-  width: 60%;
+  width: 80%;
 }
 
 .address-line-2 {
-  width: 50%;
+  width: 70%;
 }
 
 .address-line-3 {
-  width: 40%;
+  width: 60%;
 }
 
 .address-line h3 {
   position: absolute;
   padding-right: 1rem;
+  /* padding-top: 0; */
+  font-size: var(--fs-400);
   background-color: var(--bg-clr);
   z-index: 1;
 }
@@ -395,23 +441,36 @@ main {
 .arrows-box {
   display: flex;
   align-items: center;
-  font-size: 2.4rem;
+  font-size: var(--fs-500);
   overflow: hidden;
-  height: 2rem;
+  height: 3rem;
   opacity: 30%;
-  padding-left: 5rem;
 }
 
 .arrows-left {
   animation: scrollTextReverse 4s linear infinite;
-  color: var(--glitch-1);
+  /* color: var(--glitch-1); */
 }
 
 .arrows-right {
   animation: scrollText 4s linear infinite;
-  color: var(--glitch-1);
+  /* color: var(--glitch-1); */
 }
 
+/*      Lineup Section      */
+
+.section__lineup{
+  width: 100vw;
+  padding-top: 8rem;
+  display: flex;
+  justify-content: center;
+}
+
+.label-logo{
+  width: 100px;
+}
+
+/*          -----            */
 @keyframes scrollText {
   0% {
     transform: translateX(0);
