--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 777;
 }
 /*       NAV__LOGO      */
 
@@ -460,14 +461,24 @@ main {
 /*      Lineup Section      */
 
 .section__lineup{
-  width: 100vw;
-  padding-top: 8rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 88vw;
+  margin: var(--outer-margin);
+  margin-top: 0;
+  height: 300vh; /*            ADJUST LATER !*/
   display: flex;
   justify-content: center;
+  z-index: 888;
 }
 
-.label-logo{
+.falling-man{
+  position: sticky;
   width: 100px;
+  height: 200px;
+  top: 0;
+  transform: translate3d(0, -30rem, 0);
 }
 
 /*          -----            */
